# bumperbot

./: .gitignore  README.md  TROUBLESHOOTING.md
docs/: bumperbot_fix_log.md  bumperbot_rca.md
maps/: my_map.pgm  my_map.yaml
src/bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py  twist_relay.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml
src/bumperbot_controller/launch/: controller.launch.py
src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/launch/: robot_display.launch.py  robot_gazebo.launch.py
src/bumperbot_description/rviz/: 1display.rviz  display.rviz
src/bumperbot_description/urdf/: robot.urdf.xacro  robot_gazebo.xacro  robot_ros2_control.xacro
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: nav2_params.yaml  nav2_params_default.yaml
src/robot_bringup/launch/: bringup.launch.py  slam_bringup.launch.py
src/robot_firmware/: package.xml  setup.cfg  setup.py
src/robot_firmware/firmware/imu/: imu.ino
src/robot_firmware/firmware/led/led_control/: led_control.ino
src/robot_firmware/firmware/motor_encoder/: motor_encoder.ino
src/robot_firmware/robot_firmware/: imu_serial.py  led_control.py  motor.py  motor_serial.py
src/wheel_imu_localization/: package.xml  setup.cfg  setup.py
src/wheel_imu_localization/config/: ekf.yaml
src/wheel_imu_localization/launch/: ekf.launch.py
src/wheel_odometry/: package.xml  setup.py
src/wheel_odometry/wheel_odometry/: odom_node.py  odom_nodef.py
