<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>robot_bringup</name>
  <version>0.0.0</version>

  <description>Robot Bringup Package</description>

  <maintainer email="abhi@todo.todo">abhi</maintainer>

  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Launch -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Packages launched -->
  <exec_depend>bumperbot_description</exec_depend>
  <exec_depend>robot_firmware</exec_depend>
  <exec_depend>wheel_odometry</exec_depend>
  <exec_depend>wheel_imu_localization</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Used by launch file -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Python helper -->
  <exec_depend>python3-xacro</exec_depend>

  <!-- Tests -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>