<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>robot_firmware</name>
  <version>0.0.1</version>

  <description>Firmware interface nodes for AMR</description>

  <maintainer email="abhi@todo.todo">abhi</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Python Dependencies -->
  <exec_depend>python3-serial</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>